# book-recommedation

./: .env  BOOK_RECOMMENDATION.ipynb  book_recommendation.py  pyproject.toml
app/: __init__.py
app/authentication/: auth.py  schema.py
app/client/: response.py
app/database/: __init__.py  choices.py  connect.py  models.py
app/repository/: __init__.py  book.py  user.py
app/routers/: __init__.py  auth.py  book.py  recommend.py  user.py
app/routers/schema/: auth.py  book.py  recommend.py  user.py
app/settings/: __init__.py  config.py
app/utils/: exceptions.py
