[tool.poetry]
name = "book (library) recommendation system"
version = "0.1.0"
description = ""
authors = ["dakohhh <wiizzydreadmill@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.35.0"
scikit-learn = "^1.5.0"
numpy = "^1.26.4"
pandas = "^2.2.2"
jupyter = "^1.0.0"
notebook = "^7.2.0"
fastapi = "^0.111.0"
mongoengine = "^0.28.2"
pydantic-settings = "^2.3.0"
pyjwt = "^2.8.0"
beanie = "^1.26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
